--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "^10.2.0",
+    "@angular/compiler-cli": "^10.2.3",
     "typescript": "~4.0.2",
     "@angular/animations": "~10.2.0",
     "@angular/cdk": "^10.2.7",
