--- a/package.json
+++ b/package.json
@@ -2,31 +2,33 @@
   "name": "randoname",
   "version": "0.0.0",
   "scripts": {
-    "postinstall": "ng build --aot --prod",
     "ng": "ng",
     "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --prod"
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "^10.2.0",
-    "@angular/compiler-cli": "^10.2.3",
-    "typescript": "~4.0.2",
     "@angular/animations": "~10.2.0",
     "@angular/cdk": "^10.2.7",
+    "@angular/cli": "^10.2.0",
     "@angular/common": "~10.2.0",
     "@angular/compiler": "~10.2.0",
+    "@angular/compiler-cli": "^10.2.3",
     "@angular/core": "~10.2.0",
     "@angular/forms": "~10.2.0",
     "@angular/material": "^10.2.7",
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
+    "express": "^4.17.1",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "typescript": "~4.0.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -51,7 +53,7 @@
     "typescript": "~4.0.2"
   },
   "engines": {
-    "node": "~14.15.0",
-    "npm": "~6.14.8"
+    "node": "^14.15.0",
+    "npm": "^6.14.8"
   }
 }
